k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: counter-app
spec:
  selector:
    app: laravel-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
